ifndef::icons[]
:star: &#9733;
endif::[]

This document provides a high-level view of the changes introduced on Asciidoctor Maven Plugin by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/main[commit history] on GitHub.

== Unreleased

Bug Fixes::

  * Fixed default value for eruby which caused a fail when using erb templates (#610)

Improvements::

  * Split plugin and site integration in sub-modules: asciidoctor-maven-plugin and asciidoctor-doxia-module (#595)
  * Add 'asciidoc' as valid file extension in AsciidoctorDoxiaParserModule (#595)
  * Fix throwing an exception when registering a non Extension (#596)
  * Reimplement resource copy using 'plexus.util.DirectorScanner' instead of 'maven-filtering' to reduce dependencies and build time (#597)
  * Set minimal Maven version to v3.8.5 (#629)

Documentation::

  * Add v3.x.x migration guide (#598)

Build / Infrastructure::

  * Bump Doxia to v1.11.1 and maven-site-plugin in IT to 3.12.0 (#579)
  * Bump netty-codec-http to v4.1.77.Final (fix CVE-2021-21290) (#582)
  * Bump netty-codec-http to v4.1.87.Final (fix CVE-2022-41915) (#612)
  * Bump netty-codec-http to v4.1.89.Final (#615)
  * Upgrade Asciidoctorj to v2.5.4 and jRuby to v9.3.4.0 (#584)
  * Upgrade Asciidoctorj to v2.5.5 (#591)
  * Upgrade Asciidoctorj to v2.5.6 and jRuby to v9.3.8.0 (#602)
  * Upgrade Asciidoctorj to v2.5.7 (#604)
  * Upgrade build related Maven plugins to the latest versions (#606)
  * Set minimal maven version to 3.8.5 (#607)
  * Bump GH 'checkout' and 'setup-java' to v3 & delete unused TravisCI configuration (#627)
  * Bump netty-codec-http to v4.1.90.Final (#628)
  * Bump plugins versions & set CI Maven to v3.9.1 (#629)
  * Add Maven matrix testing + define Maven compatibility policy (#632)

Maintenance::
  * Replace use of reflection by direct JavaExtensionRegistry calls to register extensions (#596)

Documentation::
