@@ -11,18 +11,13 @@ Since v3.x.x the Asciidoctor Maven Plugin has been split into independent compon
 |Asciidoctor Doxia Module | Maven Site Plugin | Supported
 
 |v3.x.x
-|v3.1x.x
+|v3.1x.x ~ v4.x.x
 |Yes
 
 |===
 
 |===
 |Asciidoctor Maven Plugin | Maven Site Plugin | Supported
-
-// TODO uncomment on release
-//|v3.0.x
-//|v3.1x.x ~ v4.x.x
-//|Yes
 
 |v2.2.2
 |v3.1x.x
